# Pi-Generator

./: .gitattribute  .gitignore  LICENSE  README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.h  native_core.cpp  pi_core.cpp  pigeon.h
app/src/main/cpp/gmp/: gmp.h  gmpxx.h
app/src/main/java/com/yihaobeta/picomputor/common/: Common.kt  Exts.kt  PreferenceDelegate.kt  Utils.kt
app/src/main/java/com/yihaobeta/picomputor/function/: NativeHelper.kt  PiComputeListener.kt
app/src/main/java/com/yihaobeta/picomputor/ui/: AutoAdjustScrollView.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
